--- a/projects/newsies/styles.css
+++ b/projects/newsies/styles.css
@@ -3,6 +3,7 @@
     border-style: solid;
     border-color: black;
     border-width: 0.1px;
+    box-sizing: border-box;
     
 }
 
@@ -27,11 +28,15 @@ main{
 }
 article{
     display: inline-block;
+    width: 300px;
+    height: 400px;
+    margin: 10px;
 }
 p{
     border: none;
     text-align: left;
-    font-size: 20px
+    font-size: 20px;
+    margin: 5px;
 }
 
 footer{
