--- a/projects/design-a-blog/styles.css
+++ b/projects/design-a-blog/styles.css
@@ -67,13 +67,28 @@ body {
       font-size: 200%;
   }
 
-.ipsum{
+p.ipsum{
     /* margin-left: 25%;
     margin-right: 25%; */
+    border: solid darkslateblue;
+    border-radius: 15px;
+    border-width: 5px;
+    text-align: left;
     font-size: 150%;
 }
 
+p.date{
+    border: dotted black;
+    border-radius: 20px;
+    margin-top: 3px;
+    margin-left: 60%;
+    text-align: center;
+
+}
+
 img.breakfast{
-    max-width: 40%;
+    max-width: 100%;
+    border: solid black;
     border-radius: 10%;
+     
 }
