--- a/projects/business-time/style.css
+++ b/projects/business-time/style.css
@@ -1,19 +1,56 @@
 *{
     margin: 0;
-    background: antiquewhite;
 }
 
 .title{
-    background-image: url(gaming.jpg);
+    margin-top: 10%;
     text-align: center;
-    color: aqua;
+    color: lime;
     padding: 25pt;
-    background-size: cover;
     max-width: 100%;
     height: 50pt;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 500%;
+    text-shadow: 1pt 1pt 100pt lime;
 }
 
+body{
+    background: black;
+    
+    
+}
 
+.start{
+    
+    float:right;
+    margin-top:25%; 
+    margin-right: 10%;
+    font-size: 200%;
+    font-family: 'Press Start 2P', cursive;
+    background: black;
+    color: white;
+    text-align: center;
+    border:solid white;
+    border-radius: 25pt;
+    border-width: 5pt;
+    padding: 15pt;
+    
+}
+a:hover{
+    cursor: url(gears-of-war.png);  
+}
 
-
+@media(max-width: 1000px){
+    .title{
+        padding: 30pt;
+        font-size: 30pt;
+    }
+    
+    .start{
+        margin-top:45%; 
+        margin-right: 10%;
+        font-size: 20pt;
+        border-width: 5pt;
+    }
+}
 
