--- a/projects/business-time/about.css
+++ b/projects/business-time/about.css
@@ -8,9 +8,9 @@
     text-align: center;
     color: ghostwhite;
     text-shadow: 2pt 2pt 15pt black;
-    background: url(skulls.jpg);
+    background: url(https://images.unsplash.com/photo-1494256997604-768d1f608cac?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2901&q=80);
     background-size: cover;
-    background-position-y: -150pt;
+    background-position: center;
     padding: 100pt;
     max-width: 100%;
     height: 50pt;
@@ -62,10 +62,10 @@ body{
     padding: 15pt;
 }
 
+
 @media(max-width: 1000px){
     .title{
-        background-position-y: 0pt;
-        background-position-x: -90pt;
+        background-position: center;
         padding: 50pt;
         font-size: 200%;
     }
