--- a/projects/business-time/contact.css
+++ b/projects/business-time/contact.css
@@ -6,11 +6,12 @@
     /* margin-top: 10%; */
     
     text-align: center;
-    color: black;
+    color: ;
     text-shadow: 2pt 2pt 15pt black;
     background: url(contacts.jpg);
     background-size: cover;
-    background-position-y: -150pt;
+    background-repeat: no-repeat;
+    background-position: center;
     padding: 100pt;
     max-width: 100%;
     height: 50pt;
@@ -75,8 +76,7 @@ body{
 @media(max-width: 1000px){
     .title{
         text-align: center;
-        background-position-y: -30pt;
-        background-position-x: -15pt;
+        background-position: center;
         font-size: 200%;
         padding: 50pt;
     }
