--- a/projects/business-time/home.css
+++ b/projects/business-time/home.css
@@ -11,7 +11,7 @@
     text-shadow: 2pt 2pt 15pt black;
     background: url(fire-and-ice.jpg);
     background-size: cover;
-    background-position-y: -150pt;
+    background-position: center;
     padding: 100pt;
     max-width: 100%;
     height: 50pt;
@@ -68,7 +68,13 @@ body{
     padding: 25pt;
 }
 
-
+.picOne{
+    height: 250pt;
+    width: 250pt;
+    background: url(https://images.unsplash.com/photo-1494256997604-768d1f608cac?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2901&q=80);
+    background-size: cover;
+    background-position: center;
+}
 
 .pic{
     max-width:50%;
@@ -77,7 +83,7 @@ body{
 
 @media(max-width: 1000px){
     .title{
-        background-position-y: 0pt;
+        background-position: center;
         font-size: 200%;
         padding: 50pt;
     }
