--- a/projects/css-zengarden/styles.css
+++ b/projects/css-zengarden/styles.css
@@ -24,9 +24,10 @@ header {
 }
 div > header{
     background: url("icon.svg"), url('gridlines.png'), url('contours@2x.png'), url('huntington.jpg');
-    width: 100%;
+    width: 90%;
     height: 15em;
     background-repeat: no-repeat,repeat,no-repeat,no-repeat;
+    /* background-attachment: scroll, fixed, scroll, scroll; */
     background-size: 11%,contain,cover,cover;
     background-position: top,center,center,center;
     background-position-y: 14pt ,-9pt ,-5pt ,0pt;
@@ -51,18 +52,14 @@ div > header{
     flex-direction: row;
     justify-content: space-evenly;
     font-family: 'Julius Sans One', sans-serif;
-    color: rgba(250,250,250,0.7);
+    color: rgba(250,250,250,0.6);
     background: rgba(247,247,247,0.2);
-    height: 1em;
-    margin-top: 10pt;
+    margin-top: 25pt;
     padding: 25pt;
 }
 .view{
-    margin-left: 40pt;
     margin-top: -5pt;
-    padding-right: 50pt;
-    padding-left: 39pt;
-    width: 100%;
+    padding-left: 30pt;
 }
 .view:hover{
     transition: background 150ms ease-out;
