--- a/projects/todo-list/styles.css
+++ b/projects/todo-list/styles.css
@@ -1,21 +1,22 @@
 *{
-    margin: 0;
-}
-
-body{
-    background: antiquewhite;
-}
-
-.todo-container{
-    border: 1px solid black;
-    display: flex;
-    justify-content: space-between;
-    margin: 5px;
-    border-radius: 4px;
-    padding:5px;
+    background-color: antiquewhite;
     
 }
-
-.todo-container h1{
+.title{
     text-align: center;
+}
+.todo-container{
+    border: 2px solid black;
+    margin: 5px;
+    padding: 5px;
+    border-radius: 10px;
+}
+.todo-container{
+    text-align: center;
+    font-family:sans-serif;
+    font-weight: lighter;
+}
+
+.todo-container input{
+    zoom: 2;
 }
