--- a/instruction/css-grid-review/style.css
+++ b/instruction/css-grid-review/style.css
@@ -1,59 +1,148 @@
-/* Specifying Row Height */
+/* Specifing Row height */
 /* Media queries */
+/* When to set widths and heights */
 
-
-*{
+* {
     margin: 0;
-
-}
-#zen-grid-container section:nth-child(1){
-    background-color:geen;
-}
-#zen-grid-container section:nth-child(2){
-    background-color:blue;
-}
-#zen-grid-container section:nth-child(3){
-    background-color:purple;
-}
-#zen-grid-container section:nth-child(4){
-    background-color: teal;
+    font-size: 35px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-/* #grid-container{
-    display:grid;
-    grid-template-columns: 1fr
-
+#zen-grid-container {
+    display: grid;
 }
 
-#grid-container div{
-
-    width: 100%;
-    border:1px solid black;
-    background-color: cornflowerblue;
+#zen-grid-container header:nth-child(1){
+    background-color: green;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px, 5px;
-    grid-column: 1/3
+    height: 200px;
 }
 
-#grid-container div h3,
-#grid-container div p{
+#zen-grid-container section:nth-child(2){
+    background-color: blue;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+}
+
+#zen-grid-container section:nth-child(3){
+    background-color: purple;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#zen-grid-container section:nth-child(4){
+    background-color: teal;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#zen-grid-container footer:nth-child(5){
+    background-color: firebrick;
+    display: flex;
+    justify-content: space-around;
+}
+
+section {
+    padding: 20px;
+    font-size: 27px;
+    font-family: sans-serif;
+}
+
+.link-container {
+    display: flex;
+    flex-direction: column;
+    padding: 10px 0;
+    width: 100%;
+}
+
+.link-container a {
+    border-bottom: 1px solid black;
+    text-align: center;
+}
+
+
+@media only screen and (max-width: 420px){
+    .vanish {
+        display: none;
+    }
+}
+
+
+@media only screen and (min-width: 700px){
+    #zen-grid-container {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }
+
+    #zen-grid-container header:nth-child(1){
+        grid-column: 1 / 3;
+    }
+    
+    #zen-grid-container section:nth-child(2){
+        grid-column: 1 / 2;
+    }
+
+    #zen-grid-container section:nth-child(3){
+        grid-column: 1 / 2;
+    }
+
+    #zen-grid-container section:nth-child(4){
+        grid-column: 1 / 2;
+    }
+
+    #zen-grid-container footer:nth-child(5){
+        grid-column: 2 / 3;
+        grid-row: 2 / 5;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly
+    }
+
+    .link-container {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        justify-content: space-evenly;
+    }
+}                          
+
+
+
+
+
+
+/* 
+#grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+#grid-container div { */
+    /* width: 100%;
+    background-color: cornflowerblue;
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center; */
+    /* background-color: greenyellow;
+    padding: 20px 10px;
+    grid-column: 1 / 4;
+} */
+
+/* #grid-container div h3,
+#grid-container div p {
     font-family: sans-serif;
     font-weight: lighter;
 }
-#grid-container div h3{
-    font-size: 12px
+
+#grid-container div h3 {
+    margin: 10px 0;
+}
+
+#grid-container div p {
+    font-size: 12px;
 } */
