--- a/projects/todo-list/styles.css
+++ b/projects/todo-list/styles.css
@@ -1,15 +1,20 @@
 *{
-    background-color: antiquewhite;
+    margin: 0;
     
+}
+body{
+    background-color: black;
 }
 .title{
     text-align: center;
+    color: limegreen;
 }
 .todo-container{
-    border: 2px solid black;
+    border: 2px solid blue;
     margin: 5px;
     padding: 5px;
     border-radius: 10px;
+    background-color: honeydew;
 }
 .todo-container{
     text-align: center;
