--- a/exercises/business-homepage/src/style.css
+++ b/exercises/business-homepage/src/style.css
@@ -6,13 +6,63 @@ body{
     background-color: darkslategray;
 }
 
-.header{
-    color: limegreen;
+header{
+    color: antiquewhite;
     text-align: center;
+    font-size: 25px;
+    background: url('./images/coffee-beans.jpg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    width: 100%;
+    height: 75px;
+    padding-top: 25px;
 }
 .nav{
-    color: limegreen;
+    color: lightblue;
+    background-color: darkblue;
+    font-size: 20px;
+    padding: 5px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+}
+.splitPic{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 150px;
+}
+.picOne{
+    background: url("./images/coffee-colidescope.jpg");
+    background-size: cover;
+    background-position-y: -60px;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: auto;
+}
+.picTwo{
+    background: url("./images/beer-on-tray.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: auto;
+}
+.menu{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    /* line-height: 25px; */
+}
+.menuTitle{
+    font-style:italic;
+}
+article{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+section{
+    color: white;
+}
+p{
+    line-height: 25px;
 }
