--- a/projects/css-zengarden/styles.css
+++ b/projects/css-zengarden/styles.css
@@ -1,10 +1,11 @@
 
 @font-face{
     font-family: shitFont;
-    src: url(verdemoderna.woff)
+    src: url(verdemoderna.woff);
 }
 * {
     margin: 0;
+    box-sizing: border-box;
 }
 
 #container {
@@ -17,14 +18,14 @@ header {
     display: inline-block;
     text-align: center;
     height: 200px;
-    margin-top: 5pt;
+    margin-top: 10px;
 }
 div > header{
     background: url("icon.svg"), url('gridlines.png'), url('contours@2x.png'), url('huntington.jpg');
-    width: 90%;
-    height: 15em;
+    height: 235px;
     background-repeat: no-repeat,repeat,no-repeat,no-repeat;
-    background-size: 11%,contain,cover,cover;
+    background-size: 11%,contain,contain,cover;
+    background-attachment: scroll,fixed,fixed,scroll;
     background-position: top,center,center,center;
     background-position-y: 14pt ,-9pt ,-5pt ,0pt;
 }
@@ -34,13 +35,13 @@ div > header{
 .title{
     color: aliceblue;
     font-family: 'Julius Sans One', sans-serif;
-    font-size: 1.7em;
+    font-size: 27px;
     margin-top:20%;
 }
 .sub-header{
-    padding: 5pt;
+    padding: 10px;
     font-style: italic;
-    font-size: 1.2em;
+    font-size: 20px;
     color: #AAC0BB;
 }
 .nav-bar{
@@ -54,20 +55,20 @@ div > header{
     padding: 25pt;
 }
 .view{
-    margin-top: -5pt;
-    padding-left: 30pt;
+    margin-top: -16px;
+    padding-left: 37pt;
 }
 .view:hover{
     transition: background 150ms ease-out;
     background: rgba(247,247,247,0.3);
     position: relative;
-    padding-top: 20pt;
+    padding-top: 13pt;
     height: 50pt;
-    bottom: 20pt;
+    bottom: 13pt;
 }
 .arrow{
-    font-size: 6em;
-    margin-top: -37pt;
+    font-size: 90px;
+    margin-top: -40pt;
     padding-left: 13pt;
     background-size: 100%;
 }
@@ -78,11 +79,23 @@ div > header{
         margin-top: -25pt;
         padding-bottom: -100pt;
         height: 50pt;
-        line-height: 55pt;
+        line-height: 45pt;
 }
 
 span{
     text-decoration: underline dotted;
+}
+#download{
+    color: transparent;
+    font-family: 'Libre Baskerville', serif;
+    font-size: 13px;
+    margin-top: 30px;
+    margin-left: 30px;
+    line-height: 2;
+    width: 80%;
+}
+span > #download{
+    color: #329954;
 }
 .linky{
     color: darkcyan;
@@ -95,18 +108,19 @@ span{
 
 section{
     font-family: 'Libre Baskerville', serif;
-    font-size: .83em;
+    font-size: 13px;
     color: #325151;
-    margin-top: 20pt;
-    margin-left: 18pt;
+    margin-top: 30px;
+    margin-left: 30px;
     line-height: 2;
-    width: 65%;
+    width: 80%;
 }
 article{
     font-family: 'Julius Sans One', sans-serif;
-    font-size: .8em;
-    margin-top: 30pt;
-    margin-left: 18pt;
+    font-size: 13px;
+    margin-top: 30px;
+    margin-left: 30px;
+    width: 88%;
 }
 
 #midBody{
@@ -127,25 +141,23 @@ main {
 }
 
 .bottom-header{
-    /* display: flex; */
     flex-direction: column;
     background: url('gridlines.png'), url('contours-opaque.png'), url('koi.jpg');
-    width: 70%;
-    height: 9em;
+    height: 260px;
     background-repeat: repeat,repeat,no-repeat;
     background-size: contain,contain,cover;
     background-position: center,center,center; 
     background-attachment: fixed,fixed,scroll;
     text-align: center;
-    font-size: 1.8em;
-    line-height: 1.5em;
-    padding: 25pt;
+    font-size: 27px;
+    line-height: 1.65;
+    padding: 25px;
     font-style: italic;
-    color: rgba(146, 164, 158, 1)
+    color: rgba(146, 164, 158, 1);
 }
 .highlight{
     text-decoration: none;
-    color: rgba(203, 213, 213, 1)
+    color: rgba(203, 213, 213, 1);
 }
 .highlight:hover{
     text-decoration: underline;
@@ -155,28 +167,94 @@ main {
     color: rgba(203, 213, 213, .5);
     display: flex;
     justify-content: space-evenly;
-    font-size: 2em;
+    font-size: 35px;
     font-family: 'shitFont';
-    height: 85pt;
-    padding-top: 25pt;
-    width: 80%
+    height: 75px;
+    margin-top: 25px;
 }
 
 
-footer {
-    height: 100pt;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.names{
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: space-evenly;
+    width: 100%;
+    padding: 10px;
+    background: whitesmoke;
+}
+.individualNames{
+    padding: 10px;
+    border-bottom: 1px solid black;
+}
+#by{
+    text-decoration: none;
+    color: rgba(31,71,68, .6);
+    font-style: italic;
+}
 
+.links{
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: space-evenly;
+    padding: 10px;
+
+    background:url('gridlines-opaque.png'), url('contours-opaque.png'), url('bamboo.png'); 
+    background-repeat: repeat, repeat,no-repeat;
+    background-size: contain,contain,cover;
+    background-position: center,center,center;
+    background-color: rgba(190,215,201, 0.9);
+}
+.individualLinks{
+    padding: 10px;
+    border-bottom: 1px solid black;
+}
+h3{
+    font-family: 'Julius Sans One', sans-serif;
+    font-size: 16px;
+    margin-top: 5px;
+    color: #1f4744;
+}
+p > .individualNames{
+    color: rgba(31,71,68);
+    font-style: italic;
+}
+#translations{
+    border-bottom:none;
 }
 
 
 
+@media only screen and (min-width: 500px){
+    div > header{
+    height: 260px;
+    background-size: 11%,contain,contain,cover;
+    background-position: left,center,center,center;
+    background-position-y: 75pt ,-9pt ,-5pt ,0pt;
+    background-position-x: 60px, 0, 0, 0;
+    }
+}
+@media only screen and (min-width: 600px){
+    .title{
+        font-size: 33px;
+        margin-top: 60px;
+    }
+    #download{
+        color: #325151;
+    }
+    div > header{
+        height: 232px;
+    background-size: 14%,contain,contain,cover;
+    background-position: left,center,center,center;
+    background-position-y: 24pt ,-9pt ,-5pt ,0pt;
+    background-position-x: 55px, 0, 0, 0;
+    }
+    .weird-fonts{
+        font-size: 45px;
+    }
+}
 
 
-@media only screen and (min-width: 700px){
+@media only screen and (min-width: 1132px){
     #container {
         grid-template-columns: 3fr 1fr;
     }
@@ -187,7 +265,29 @@ footer {
     
     footer {
         grid-column: 2 / 3;
-        grid-row: 1 / span 3;
+        grid-row: 2 / span 3;
         height: 100%;
+    }
+    .names{
+        font-size: 20px;
+        display: flex;
+        flex-direction: column;
+        padding: 50px;
+    }
+    h3{
+        font-size: 20px;
+    }
+    article{
+        font-size: 20px;
+    }
+    section{
+        font-size: 15px;
+    }
+    #download{
+        font-size: 15px;
+    }
+    .links{
+        display: flex;
+        flex-direction: column;
     }
 }
