--- a/projects/match-your-malts/src/style.css
+++ b/projects/match-your-malts/src/style.css
@@ -6,17 +6,17 @@
     font-family: sans-serif;
     font-weight: lighter;
     outline: none;
+
 }
 
 html {
-    background-color: #1119;
+    background-color: #2F2235;
 }
 
 
 .home,
 .favDrinks,
-.contact,
-.drinkFinder {
+.contact{
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -35,11 +35,7 @@ html {
 .contact {
     background-color: purple;
 }
-
-.drinkFinder {
-    background-color: lightsalmon;
-}
-///////////////////////////////////////
+/* /////////////////////////////////////// */
 .app-container {
 
 }
@@ -52,7 +48,7 @@ html {
     display: flex;
     flex-direction: column;
     width: 100px;
-    background-color: #1119;
+    background-color: #ff69b4b6;
     height: 100vh;
     align-items: center;
     position: absolute;
@@ -70,7 +66,7 @@ html {
 }
 
 .nav a {
-    color: white;
+    color: cornflowerblue;
     width: 100%;
     text-align: center;
     padding: 5px 0;
@@ -80,11 +76,11 @@ html {
 
 .nav a:visited,
 .nav a:active {
-    color: white;
+    color: blue;
 }
 
 .nav a:hover {
-    background-color: #5559;
+    background-color: cornflowerblue;
 }
 
 .overlay {
@@ -159,6 +155,7 @@ html {
 }
 
 .beerIcon{
+    margin-top: 15px;
     background-image: url('./media/beer-icon.png');
     background-size: contain;
     background-repeat: no-repeat;
@@ -167,3 +164,132 @@ html {
     height: 50px;
 }
 /* ///////////////////////////////////////////////// */
+.app-container{
+    color: #d29062;
+    background-color: #2F2235;
+}
+
+.app-container > form {
+    /* color: #ffd59a; */
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 5px;
+    border: 1px solid #ffd59a;
+    border-radius: 10px;
+    margin: 5px;
+    background-color: rgba(43, 65, 98, 0.726)
+}
+
+.app-container > h1 {
+    text-align: center;
+}
+
+.app-container > h6 {
+    text-align: center;
+}
+
+.app-container > form > input {
+    margin: 10px 0;
+    
+}
+
+.app-container > form > button {
+    padding: 4px 0;
+    border-radius: 3px;
+}
+
+.listed-beers{
+    display: flex;
+    flex-direction: column;
+    margin-right: 25px;
+}
+
+.beer-div {
+    color: #d29062;
+    background-color: rgba(43, 65, 98, 0.726);
+    border-radius: 10px;
+    border: 2px solid #ffd59a;
+    margin: 25px;
+    height: auto;
+    /* max-width: 500px; */
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    font-size: 15px;
+}
+
+.beer-name{
+    text-align: center;
+}
+
+.beer-pic-and-description{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: 15px 0;
+    
+}
+
+.description{
+    margin: 0 25px;
+}
+
+.beer-pic{
+    background-size: cover;
+}
+
+
+/* ///////////////////////////// */
+
+@media only screen and (min-width: 600px){
+    .nav {
+        flex-direction: row;
+        justify-content: space-evenly;
+        width: 100vh;
+        background-color: #ff69b4b6;
+        height: 100px;
+        top: 0;
+        transition: top 300ms linear ;
+    }
+    
+    .nav-open {
+        top: 0;
+    }
+    
+    .nav-closed {
+        top: -100px;
+    }
+
+    .overlay {
+        width: 100vw;
+        height: 100vh;
+        background-color:transparent;
+    }
+    
+    
+    .overlay-open {
+        top: 0;
+    }
+    
+    .overlay-closed {
+        top: -100vw;
+    }
+
+    .beerIcon{
+        margin-top: 0;
+        margin-right: 35px;
+        background-image: url('./media/beer-icon.png');
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        width: 75px;
+        height: 75px;
+    }
+
+    .listed-beers{
+        display: grid;
+        grid-template-columns: auto auto;
+    }
+}
