zen-garden update

--- a/projects/match-your-malts-v2/src/style.css
+++ b/projects/match-your-malts-v2/src/style.css
@@ -39,7 +39,7 @@ html {
 .drinkFinder {
     background-color: lightsalmon;
 }
-///////////////////////////////////////
+/* ////////////////////////////////////// */
 .app-container {
 
 }
